fix: 불필요한 try/catch 제거