@@ -6,8 +6,8 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Clock;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -540,11 +540,7 @@ public class CoopService {
         // URL format: https://<bucket-name>/<key(경로+파일명)>
         String cdnPath = s3Client.getDomainUrlPrefix();
         String encodedKey = imageUrl.substring(imageUrl.indexOf(cdnPath) + cdnPath.length());
-        try {
-            return URLDecoder.decode(encodedKey, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new KoinIllegalStateException("Key 디코딩 중 문제가 발생했습니다. " + e.getMessage());
-        }
+        return URLDecoder.decode(encodedKey, StandardCharsets.UTF_8);
     }
 
     private void preprocessPath(File localImageDirectory, File zipFilePath) {
